--- a/index.html
+++ b/index.html
@@ -613,8 +613,7 @@
         </picture>
       </div>
       <p class="footer__copyright">
-        This is my Web "Ultramarines" Project in the Warhammer 40K universe
-        owned by
+        This Web "Ultramarines" Project in the Warhammer 40K universe owned by
         <a
           href="https://www.games-workshop.com/"
           target="_blank"
